--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "outlayer": "^2.1.1"
   },
   "dependencies": {
-    "jquery": "^3.6.0"
+    "bootstrap": "^5.1.3",
+    "inputmask": "^5.0.7",
+    "jquery": "^3.6.0",
+    "jquery-form-styler": "^2.0.2"
   }
 }
