--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "outlayer": "^2.1.1"
   },
   "dependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "bootstrap": "^5.1.3",
     "inputmask": "^5.0.7",
     "jquery": "^3.6.0",
