--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@fancyapps/fancybox": "^3.5.7",
+    "air-datepicker": "^3.2.0",
     "bootstrap": "^5.1.3",
     "inputmask": "^5.0.7",
     "jquery": "^3.6.0",
